# washi-md

./: CHANGELOG.md  LICENSE  README.en.md  README.ko.md  README.md  README.zh-TW.md  RELEASING.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/pywashi/: __init__.py  form.py  genko.css
src/pywashi/form_assets/: form-render.js  form.css
src/washi_md/: __init__.py  genko.css  style.css  vertical.css
src/washi_md/themes/: bungei.css  gothic.css  maru.css  textbook.css
tests/: test_washi.py
