[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pywashi"
dynamic = ["version"]
description = "Markdown/AsciiDoc から美しい日本語文書 (HTML/PDF) を作る — 日本語組版CSS・CJKフレンドリー・Chrome印刷"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "aiseed-dev" }]
keywords = ["markdown", "japanese", "typography", "pdf", "document", "cjk"]
dependencies = ["markdown-it-py>=2.0,<4", "mdit-py-cjk-friendly>=0.3"]

[project.optional-dependencies]
dev = ["pytest>=8"]
asciidoc = ["pyasciidoc>=0.3"]

[project.scripts]
washi = "pywashi:main"

[project.urls]
Homepage = "https://github.com/aiseed-dev/pywashi"

[tool.hatch.build.targets.wheel]
packages = ["src/pywashi"]

[tool.hatch.version]
path = "src/pywashi/__init__.py"
